# mol-vae

./: .gitignore  pyproject.toml
literature/: README.md
src/: molgen.py  utils.py
