[tool.poetry]
name = "molgen"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "numpy"
pandas = "^1.3.2"
rdkit-pypi = "^2021.3.4"
selfies = "^1.0.4"
fastai = "^2.5.2"
wandb = "^0.12.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
